# DisdainLauncher

./: CMakeLists.txt  DisdainLauncher.manifest  README.md  configfile.cpp  configfile.h  getexepath.cpp  getexepath.h  gtk.cpp  launcher.cpp  launcher.h  macos.mm  strings.h  win32.cpp
